// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Slider can be a range slider 1`] = `
<DocumentFragment>
  <div
    class="mdc-slider mdc-slider--range"
    tabindex="0"
  >
    <input
      aria-label="Slider start value"
      aria-valuemax="100"
      class="mdc-slider__input"
      max="100"
      min="0"
      name="rangeStart"
      type="range"
      value=""
    />
    <input
      aria-label="Slider value"
      aria-valuemax="100"
      class="mdc-slider__input"
      max="100"
      min="0"
      name="rangeEnd"
      type="range"
      value=""
    />
    <div
      class="mdc-slider__track"
    >
      <div
        class="mdc-slider__track--inactive"
      />
      <div
        class="mdc-slider__track--active"
      >
        <div
          class="mdc-slider__track--active_fill"
        />
      </div>
    </div>
    <div
      class="mdc-slider__thumb"
    >
      <div
        class="mdc-slider__thumb-knob"
      />
    </div>
    <div
      class="mdc-slider__thumb"
    >
      <div
        class="mdc-slider__thumb-knob"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`Slider renders uncontrolled 1`] = `
<DocumentFragment>
  <div
    class="mdc-slider"
    tabindex="0"
  >
    <input
      aria-label="Slider value"
      aria-valuemax="100"
      class="mdc-slider__input"
      max="100"
      min="0"
      name="rangeEnd"
      type="range"
      value=""
    />
    <div
      class="mdc-slider__track"
    >
      <div
        class="mdc-slider__track--inactive"
      />
      <div
        class="mdc-slider__track--active"
      >
        <div
          class="mdc-slider__track--active_fill"
        />
      </div>
    </div>
    <div
      class="mdc-slider__thumb"
    >
      <div
        class="mdc-slider__thumb-knob"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`Slider renders with all props 1`] = `
<DocumentFragment>
  <div
    class="mdc-slider mdc-slider--discrete mdc-slider--tick-marks mdc-slider--disabled mdc-slider--disabled"
    tabindex="0"
  >
    <input
      aria-label="Slider value"
      aria-valuemax="100"
      aria-valuenow="50"
      class="mdc-slider__input"
      disabled=""
      max="100"
      min="0"
      name="rangeEnd"
      step="10"
      type="range"
      value="50"
    />
    <div
      class="mdc-slider__track"
    >
      <div
        class="mdc-slider__track--inactive"
      />
      <div
        class="mdc-slider__track--active"
      >
        <div
          class="mdc-slider__track--active_fill"
        />
      </div>
      <div
        class="mdc-slider__tick-marks"
      >
        <div
          class="mdc-slider__tick-mark--active"
        />
        <div
          class="mdc-slider__tick-mark--active"
        />
        <div
          class="mdc-slider__tick-mark--active"
        />
        <div
          class="mdc-slider__tick-mark--active"
        />
        <div
          class="mdc-slider__tick-mark--active"
        />
        <div
          class="mdc-slider__tick-mark--active"
        />
        <div
          class="mdc-slider__tick-mark--inactive"
        />
        <div
          class="mdc-slider__tick-mark--inactive"
        />
        <div
          class="mdc-slider__tick-mark--inactive"
        />
        <div
          class="mdc-slider__tick-mark--inactive"
        />
        <div
          class="mdc-slider__tick-mark--inactive"
        />
      </div>
    </div>
    <div
      class="mdc-slider__thumb"
    >
      <div
        aria-hidden="true"
        class="mdc-slider__value-indicator-container"
      >
        <div
          class="mdc-slider__value-indicator"
        >
          <span
            class="mdc-slider__value-indicator-text"
          >
            50
          </span>
        </div>
      </div>
      <div
        class="mdc-slider__thumb-knob"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`Slider renders with range slider props 1`] = `
<DocumentFragment>
  <div
    class="mdc-slider mdc-slider--range"
    data-min-range="1"
    tabindex="0"
  >
    <input
      aria-label="Slider start value"
      aria-valuemax="10"
      aria-valuenow="2"
      class="mdc-slider__input"
      max="10"
      min="1"
      name="rangeStart"
      type="range"
      value="2"
    />
    <input
      aria-label="Slider value"
      aria-valuemax="10"
      aria-valuenow="9"
      class="mdc-slider__input"
      max="10"
      min="2"
      name="rangeEnd"
      type="range"
      value="9"
    />
    <div
      class="mdc-slider__track"
    >
      <div
        class="mdc-slider__track--inactive"
      />
      <div
        class="mdc-slider__track--active"
      >
        <div
          class="mdc-slider__track--active_fill"
        />
      </div>
    </div>
    <div
      class="mdc-slider__thumb"
    >
      <div
        class="mdc-slider__thumb-knob"
      />
    </div>
    <div
      class="mdc-slider__thumb"
    >
      <div
        class="mdc-slider__thumb-knob"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`Slider renders with tick marks 1`] = `
<DocumentFragment>
  <div
    class="mdc-slider mdc-slider--discrete mdc-slider--tick-marks"
    tabindex="0"
  >
    <input
      aria-label="Slider value"
      aria-valuemax="100"
      class="mdc-slider__input"
      max="100"
      min="0"
      name="rangeEnd"
      step="10"
      type="range"
      value=""
    />
    <div
      class="mdc-slider__track"
    >
      <div
        class="mdc-slider__track--inactive"
      />
      <div
        class="mdc-slider__track--active"
      >
        <div
          class="mdc-slider__track--active_fill"
        />
      </div>
      <div
        class="mdc-slider__tick-marks"
      >
        <div
          class="mdc-slider__tick-mark--active"
        />
        <div
          class="mdc-slider__tick-mark--inactive"
        />
        <div
          class="mdc-slider__tick-mark--inactive"
        />
        <div
          class="mdc-slider__tick-mark--inactive"
        />
        <div
          class="mdc-slider__tick-mark--inactive"
        />
        <div
          class="mdc-slider__tick-mark--inactive"
        />
        <div
          class="mdc-slider__tick-mark--inactive"
        />
        <div
          class="mdc-slider__tick-mark--inactive"
        />
        <div
          class="mdc-slider__tick-mark--inactive"
        />
        <div
          class="mdc-slider__tick-mark--inactive"
        />
        <div
          class="mdc-slider__tick-mark--inactive"
        />
      </div>
    </div>
    <div
      class="mdc-slider__thumb"
    >
      <div
        aria-hidden="true"
        class="mdc-slider__value-indicator-container"
      >
        <div
          class="mdc-slider__value-indicator"
        >
          <span
            class="mdc-slider__value-indicator-text"
          />
        </div>
      </div>
      <div
        class="mdc-slider__thumb-knob"
      />
    </div>
  </div>
</DocumentFragment>
`;
